# yolov5-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
detector/: YOLODetector.cpp  YOLODetector.h
